# ros2robosys2023

./: CMakeLists.txt  LICENSE  README.md  package.xml  setup.cfg  setup.py
.github/workflows/: test.yml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/mkpkg/lib/mkpkg/: listener  talker
install/mkpkg/share/mkpkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
launch/: example.launch.py  example.launch.xml
log/: latest_build
ros2robosys2023/: .listener.py.swp  listener.py  talker.py
src/: .talker.cpp.swp  calculater.cpp  listener.cpp  talker.cpp
src/mkpkg/: package.xml  setup.py
src/mkpkg/launch/: talk_listen.launch.py
src/mkpkg/mkpkg/: talker.py
src/mkpkg/test/: test.bash
test/: test.bash
